--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,72 @@
   box-sizing: border-box;
 }
 
+body{
+  font-family: "Karla", sans-serif;
+  margin: 0;
+}
+
+main{
+  padding: 36px;
+}
+
+header {
+  background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
+  color: white;
+  height: 65px;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+}
+
+header img {
+  margin-left: 6px;
+  width: 35px;
+  height: 100%;
+  flex-basis: 3%;
+}
+
+header h1{
+  flex-basis: 65%;
+  font-weight: 700;
+  line-height: 25px;
+  letter-spacing: -10%;
+  font-family: Karla;
+  height: 24px;
+  margin-right: auto;
+}
+
+nav p{
+  padding: 15px 125px 0px 0px;
+  flex-basis: 35%;
+  font-family: inter, sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14.52px;
+  text-align: right;
+  color: #FCFCFC;
+}
+
+form{
+  display: grid;
+  grid-template-rows: 40px 40px;
+  grid-template-columns: 1fr 1fr;
+  gap: 17px;
+}
+
+input{
+  font-family: "Karla", sans-serif;
+  border: 1px solid #D5D4D8;
+  border-radius: 5px;
+  text-indent: 5px;
+}
+
+
+
+button{
+  grid-column: 1/-1;
+  background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+  color: white;
+  border-radius: 5px;
+  border: none;
+}
