--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ nav p{
   color: #FCFCFC;
 }
 
-form{
+.form{
   display: grid;
   grid-template-rows: 40px 40px;
   grid-template-columns: 1fr 1fr;
@@ -70,4 +70,9 @@ button{
   color: white;
   border-radius: 5px;
   border: none;
+}
+
+.meme-img{
+  width: 100%;
+  height: auto;
 }
