--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ nav p{
   grid-template-rows: 40px 40px;
   grid-template-columns: 1fr 1fr;
   gap: 17px;
+  margin-bottom: 17px;
 }
 
 input{
@@ -64,16 +65,56 @@ input{
 
 
 
-button{
-  grid-column: 1/-1;
+button {
+  grid-column: 1 / -1;
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
   background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
   color: white;
-  border-radius: 5px;
   border: none;
+  cursor: pointer;
 }
 
-.meme-img{
-  margin-top: 3rem;
-  width: 100%;
-  height: auto;
+.meme {
+  position: relative;
+}
+
+
+.meme--image {
+  max-width: 100%;
+  min-width: 100%;
+  border-radius: 3px;
+}
+
+.meme--text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow:
+      2px 2px 0 #000,
+      -2px -2px 0 #000,
+      2px -2px 0 #000,
+      -2px 2px 0 #000,
+      0 2px 0 #000,
+      2px 0 0 #000,
+      0 -2px 0 #000,
+      -2px 0 0 #000,
+      2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 0;
 }
